Download Fixes
